--- a/.github/workflows/docs-check.yml
+++ b/.github/workflows/docs-check.yml
@@ -37,8 +37,8 @@ jobs:
           echo "Running markdown-link-check..."
           # 設定ファイル .markdown-link-check.json をリポジトリに置くと細かく設定可能
           find . -name '*.md' -not -path './node_modules/*' -print0 | \
-            xargs -0 -n1 -I{} markdown-link-check {} -q
-
+          xargs -0 -I{} markdown-link-check {} -q
+          
       - name: Run cspell (spellcheck)
         run: |
           echo "Running cspell..."
